test/error/if-condition-not-bool.dsk
if 1
    echo("hello")
